Tests/MemoryResourceTest/err.txt
In file included from ..\..\Source\Stl\MemoryReasource\memory_resource.cpp:2:0:
..\..\Source\Stl\MemoryReasource\..\mutex.h:7:13: error: 'std::mutex' has not been declared
  using std::mutex;
             ^
..\..\Source\Stl\MemoryReasource\memory_resource.cpp:70:9: error: 'mutex' does not name a type
  static mutex memoryResourceLock;
         ^
..\..\Source\Stl\MemoryReasource\memory_resource.cpp: In function 'Yupei::memory_resource* Yupei::set_default_resource(Yupei::memory_resource*)':
..\..\Source\Stl\MemoryReasource\memory_resource.cpp:92:14: error: 'mutex' was not declared in this scope
   lock_guard<mutex> guard{ memoryResourceLock };
              ^
..\..\Source\Stl\MemoryReasource\memory_resource.cpp:92:19: error: template argument 1 is invalid
   lock_guard<mutex> guard{ memoryResourceLock };
                   ^
..\..\Source\Stl\MemoryReasource\memory_resource.cpp:92:28: error: 'memoryResourceLock' was not declared in this scope
   lock_guard<mutex> guard{ memoryResourceLock };
                            ^
